--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,10 @@
     <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOBRE</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTATO</a>
     <a data-toggle="modal" href="html/login.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ENTRAR</a>
-      </div>
-    </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
   </div>
+    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
 </div>
+
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
@@ -73,10 +72,9 @@
         </form>
       </div>
     </div>
-  </div>
+</div>
 
 <!-- End Page Content -->
-</div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
@@ -123,6 +121,6 @@ window.onclick = function(event) {
     modal.style.display = "none";
   }
 }
-</script
+</script>
 
 <router-outlet></router-outlet>
