--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,126 +1,130 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div app-root class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">INICIO</a>
-    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOBRE</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTATO</a>
-    <a data-toggle="modal" href="html/login.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ENTRAR</a>
-  </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
-</div>
+<main class="page bg-white" id="petratings">
+  <title>Aluas - Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 
+  <style>
+    html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    .card-footer{
+      background: #e9e9e9;
+    }
+  </style>
+  <body class="w3-light-grey">
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
-</div>
-
-<!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
-
-  <!-- Automatic Slideshow Images -->
-  <!--<div class="mySlides w3-display-container w3-center">
-    <img src="images/logo2.png" style="width:50%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="images/logo2.png" style="width:50%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>
-    </div>
-  </div>-->
-  <div class="mySlides w3-display-container w3-center w3-black">
-    <img src="html/images/aluas.png" style="width:40%" >
+  <!-- Top container -->
+  <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
+    <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
+    <span class="w3-bar-item w3-right"><img src='../src/assets/simple.png' style="width:125px"></span>
   </div>
 
-  <!-- The about Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="about">
-    <h2 class="w3-wide">Quem somos?</h2>
-    <p class="w3-opacity">Temos 24 horas no nosso dia e cada uma conta!</p>
-    <p class="w3-center">Criamos um aplicação capaz de nos auxiliar no gerenciamento e priorização das atividades sem complicação.</p>
-  </div>
-
-
-  <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">Contato</h2>
-    <p class="w3-opacity w3-center">Achou legal? Nos envie uma mensagem!</p>
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Brasil, SP<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: suporte@aluas.com<br>
+  <!-- Sidebar/menu -->
+  <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+    <div class="w3-container w3-row">
+      <div class="w3-col s4">
+        <img src="../images/photo.jpg" class="w3-circle w3-margin-right" style="width:86px">
       </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Nome" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
+      <div class="w3-col s8 w3-bar w3-center">
+        <span>Welcome, <strong>Heloa</strong></span><br>
+        <a href="#" class="w3-button"><i class="fa fa-envelope"></i></a>
+        <a href="#" class="w3-button"><i class="fa fa-user"></i></a>
+        <a href="#" class="w3-button"><i class="fa fa-cog"></i></a>
+        <a href="#" class="w3-padding-16 w3-blue w3-button" style='border-radius: 12px;'>Add activity <i class="fa fa-plus-circle"></i></a>
+      </div>
+    </div>
+    <hr>
+    <!-- <div class="w3-container">
+    <h5>Dashboard</h5>
+  </div> -->
+    <div class="w3-bar-block">
+      <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
+      <a href="home.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-area-chart fa-fw"></i>  Overview</a>
+      <a href="board.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-dashboard fa-fw"></i>  Dashboard</a>
+    </div>
+  </nav>
+
+
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+  <!-- !PAGE CONTENT! -->
+    <!-- Header -->
+    <header class="w3-container" style="padding-top:22px">
+      <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
+    </header>
+    <!-- class="w3-row-padding w3-margin-bottom" -->
+    <div  class="row">
+      <div class="w3-third">
+        <div class="w3-container w3-red w3-padding-16">
+          <div class="w3-left"><i class="fa fa-exclamation-triangle w3-xxxlarge"></i></div>
+          <div class="w3-right">
+            <h3>2</h3>
           </div>
-          <input class="w3-input w3-border" type="text" placeholder="Mensagem" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">ENVIAR</button>
-        </form>
+          <div class="w3-clear"></div>
+          <h4>Get it done</h4>
+        </div>
       </div>
+      <div class="w3-third">
+        <div class="w3-container w3-blue w3-padding-16">
+          <div class="w3-left"><i class="fa fa-send w3-xxxlarge"></i></div>
+          <div class="w3-right">
+            <h3>6</h3>
+          </div>
+          <div class="w3-clear"></div>
+          <h4>Delegate</h4>
+        </div>
+      </div>
+      <div class="w3-third">
+        <div class="w3-container w3-green w3-padding-16">
+          <div class="w3-left"><i class="fa fa-clock-o  w3-xxxlarge"></i></div>
+          <div class="w3-right">
+            <h3>15</h3>
+          </div>
+          <div class="w3-clear"></div>
+          <h4>When possible</h4>
+        </div>
+      </div>
+
+    <!-- fonte dos cards https://getbootstrap.com/docs/4.0/components/card/ -->
+    <div class="container">
+      <app-add
+        (addEvt)="addApt($event)"></app-add>
+      <app-board
+        [aptList]="modifiedList"
+        (deleteEvt)="deleteApt($event)"
+        (updateEvt)="updateApt($event)"
+      ></app-board>
     </div>
-</div>
 
-<!-- End Page Content -->
 
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
 
-<script>
-// Automatic Slideshow - change image every 4 seconds
-var myIndex = 0;
-carousel();
+    <!-- End page content -->
+    <script>
+      // Get the Sidebar
+      var mySidebar = document.getElementById("mySidebar");
 
-function carousel() {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}
-  x[myIndex-1].style.display = "block";
-  setTimeout(carousel, 4000);
-}
+      // Get the DIV with overlay effect
+      var overlayBg = document.getElementById("myOverlay");
 
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
+      // Toggle between showing and hiding the sidebar, and add overlay effect
+      function w3_open() {
+        if (mySidebar.style.display === 'block') {
+          mySidebar.style.display = 'none';
+          overlayBg.style.display = "none";
+        } else {
+          mySidebar.style.display = 'block';
+          overlayBg.style.display = "block";
+        }
+      }
 
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
-
-<router-outlet></router-outlet>
+      // Close the sidebar with the close button
+      function w3_close() {
+        mySidebar.style.display = "none";
+        overlayBg.style.display = "none";
+      }
+    </script>
+</main><!-- main -->
