--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,130 +1,16 @@
-<main class="page bg-white" id="petratings">
-  <title>Aluas - Home</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
-
-  <style>
-    html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-    .card-footer{
-      background: #e9e9e9;
-    }
-  </style>
-  <body class="w3-light-grey">
-
-  <!-- Top container -->
-  <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-    <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
-    <span class="w3-bar-item w3-right"><img src='../src/assets/simple.png' style="width:125px"></span>
-  </div>
-
-  <!-- Sidebar/menu -->
-  <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-    <div class="w3-container w3-row">
-      <div class="w3-col s4">
-        <img src="../images/photo.jpg" class="w3-circle w3-margin-right" style="width:86px">
-      </div>
-      <div class="w3-col s8 w3-bar w3-center">
-        <span>Welcome, <strong>Heloa</strong></span><br>
-        <a href="#" class="w3-button"><i class="fa fa-envelope"></i></a>
-        <a href="#" class="w3-button"><i class="fa fa-user"></i></a>
-        <a href="#" class="w3-button"><i class="fa fa-cog"></i></a>
-        <a href="#" class="w3-padding-16 w3-blue w3-button" style='border-radius: 12px;'>Add activity <i class="fa fa-plus-circle"></i></a>
-      </div>
-    </div>
-    <hr>
-    <!-- <div class="w3-container">
-    <h5>Dashboard</h5>
-  </div> -->
-    <div class="w3-bar-block">
-      <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-      <a href="home.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-area-chart fa-fw"></i>  Overview</a>
-      <a href="board.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-dashboard fa-fw"></i>  Dashboard</a>
-    </div>
-  </nav>
+  <div class="row">
+    <div class="col-md-12 bg-white">
 
 
-  <!-- Overlay effect when opening sidebar on small screens -->
-  <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
-  <!-- !PAGE CONTENT! -->
-    <!-- Header -->
-    <header class="w3-container" style="padding-top:22px">
-      <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
-    </header>
-    <!-- class="w3-row-padding w3-margin-bottom" -->
-    <div  class="row">
-      <div class="w3-third">
-        <div class="w3-container w3-red w3-padding-16">
-          <div class="w3-left"><i class="fa fa-exclamation-triangle w3-xxxlarge"></i></div>
-          <div class="w3-right">
-            <h3>2</h3>
-          </div>
-          <div class="w3-clear"></div>
-          <h4>Get it done</h4>
-        </div>
-      </div>
-      <div class="w3-third">
-        <div class="w3-container w3-blue w3-padding-16">
-          <div class="w3-left"><i class="fa fa-send w3-xxxlarge"></i></div>
-          <div class="w3-right">
-            <h3>6</h3>
-          </div>
-          <div class="w3-clear"></div>
-          <h4>Delegate</h4>
-        </div>
-      </div>
-      <div class="w3-third">
-        <div class="w3-container w3-green w3-padding-16">
-          <div class="w3-left"><i class="fa fa-clock-o  w3-xxxlarge"></i></div>
-          <div class="w3-right">
-            <h3>15</h3>
-          </div>
-          <div class="w3-clear"></div>
-          <h4>When possible</h4>
-        </div>
+      <div class="container">
+        <app-add
+          (addEvt)="addApt($event)"></app-add>
+        <app-list
+          [aptList]="modifiedList"
+          (deleteEvt)="deleteApt($event)"
+          (updateEvt)="updateApt($event)"
+        ></app-list>
       </div>
 
-    <!-- fonte dos cards https://getbootstrap.com/docs/4.0/components/card/ -->
-    <div class="container">
-      <app-add
-        (addEvt)="addApt($event)"></app-add>
-      <app-board
-        [aptList]="modifiedList"
-        (deleteEvt)="deleteApt($event)"
-        (updateEvt)="updateApt($event)"
-      ></app-board>
-    </div>
-
-
-
-    <!-- End page content -->
-    <script>
-      // Get the Sidebar
-      var mySidebar = document.getElementById("mySidebar");
-
-      // Get the DIV with overlay effect
-      var overlayBg = document.getElementById("myOverlay");
-
-      // Toggle between showing and hiding the sidebar, and add overlay effect
-      function w3_open() {
-        if (mySidebar.style.display === 'block') {
-          mySidebar.style.display = 'none';
-          overlayBg.style.display = "none";
-        } else {
-          mySidebar.style.display = 'block';
-          overlayBg.style.display = "block";
-        }
-      }
-
-      // Close the sidebar with the close button
-      function w3_close() {
-        mySidebar.style.display = "none";
-        overlayBg.style.display = "none";
-      }
-    </script>
-</main><!-- main -->
+    </div><!-- col-md-12 -->
+  </div><!-- row -->
