update spring config

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="appointment-list item-list mb-3">
-  <div class="pet-item col media py-3"
+  <div class="pet-item col media py-3" routerLink="/list"
        *ngFor="let item of aptList">
     <div class="mr-3">
       <button class="pet-delete btn btn-sm btn-danger"
