input-number wip

--- a/src/app/atividade/add.component.html
+++ b/src/app/atividade/add.component.html
@@ -37,7 +37,7 @@
                 <i class="fa fa-minus-square"></i>
               </button>
             </div>
-            <input type="text" id="gravidade" class="form-control input-number" value="1" min="1" max="5">
+            <input type="text" id="gravidade" name="gravidade" class="form-control input-number" value="1" min="1" max="5" [(ngModel)]="gravidade">
             <div class="input-group-btn">
               <button type="button" class="btn btn-default btn-number" id="gvddplusbtn">
                 <i class="fa fa-plus-square"></i>
@@ -59,7 +59,7 @@
                 <i class="fa fa-minus-square"></i>
               </button>
             </div>
-            <input type="text" id="urgencia" class="form-control input-number" value="1" min="1" max="5">
+            <input type="text" id="urgencia" name="urgencia" class="form-control input-number" value="1" min="1" max="5" [(ngModel)]="urgencia">
             <div class="input-group-btn">
               <button type="button" class="btn btn-default btn-number" id="rgncplusbtn">
                 <i class="fa fa-plus-square"></i>
@@ -81,7 +81,7 @@
                 <i class="fa fa-minus-square"></i>
               </button>
             </div>
-            <input type="text" id="tendencia" class="form-control input-number" value="1" min="1" max="5">
+            <input type="text" id="tendencia" name="tendencia" class="form-control input-number" value="1" min="1" max="5" [(ngModel)]="tendencia">
             <div class="input-group-btn">
               <button type="button" class="btn btn-default btn-number" id="tdncplusbtn">
                 <i class="fa fa-plus-square"></i>
