--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <app-add
               (addEvt)="addAtividade($event)"></app-add>
         <app-list
-          [aptList]="modifiedList"
+          [atvdList]="modifiedList"
           (deleteEvt)="deleteApt($event)"
           (updateEvt)="updateApt($event)"
         ></app-list>
