list working, wip edit/delete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,7 @@
     <div class="col-md-12 bg-white">
 
 
-      <div class="container">
-        <app-add></app-add>
-        <app-list></app-list>
-      </div>
+      <router-outlet></router-outlet>
 
     </div><!-- col-md-12 -->
   </div><!-- row -->
