--- a/src/app/atividade/edit.component.html
+++ b/src/app/atividade/edit.component.html
@@ -6,13 +6,26 @@
     <mat-card-content>
       <input type="hidden" name="id" [(ngModel)]="atividade.id">
       <mat-form-field>
-        <input matInput placeholder="Atividade Titulo" [(ngModel)]="atividade.titulo"
-               required name="titulo" #titulo>
+        <input matInput [(ngModel)]="atividade.titulo" required name="titulo" #titulo>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="atividade.descricao" required name="descricao" #descricao>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="atividade.gravidade" required name="gravidade" #gravidade>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="atividade.urgencia" required name="urgencia" #urgencia>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="atividade.tendencia" required name="tendencia" #tendencia>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="atividade.score" required name="score" #score>
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit"
-              [disabled]="!atividadeForm.form.valid">Save</button>
+      <button mat-raised-button color="primary" type="submit">Save</button>
       <button mat-raised-button color="secondary" (click)="remove(atividade.id)"
               *ngIf="atividade.id" type="button">Delete</button>
       <a mat-button routerLink="/list">Cancel</a>
