dashboard grouping working

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,5 @@
-.search-form {
-  width: 90%;
-  margin-left: 20px;
-}
-
 .bg-danger{
   margin: 10%;
-
 }
 
 .bg-success{
@@ -18,5 +12,68 @@
 
 .fa-edit{
   color: white !important;
+}
 
+.card-header{
+  font-size: 150%;
+}
+
+.w3-left{
+  margin-right: 15px;
+}
+
+.w3-container{
+  padding-top:22px;
+}
+
+.fa-search{
+  align-content: flex-end;
+}
+
+.fa-dashboard{
+  margin-left: 10px;
+}
+
+#custom-search-input {
+        margin:0;
+        margin-top: 0px;
+        padding: 0;
+        margin-top: 0%;
+        margin-left: 0%;
+        margin: -8px;
+        margin-top: 2px;
+        margin-bottom: 2%;
+}
+
+#custom-search-input .search-query {
+    padding-right: 3px;
+    padding-right: 4px \9;
+    padding-left: 3px;
+    padding-left: 4px \9;
+    /* IE7-8 doesn't have border-radius, so don't indent the padding */
+
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
+#custom-search-input button {
+    border: 0;
+    background: none;
+    /** belows styles are working good */
+    padding: 2px 5px;
+    margin-top: 2px;
+    position: relative;
+    left: -28px;
+    /* IE7-8 doesn't have border-radius, so don't indent the padding */
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    color:#D9230F;
+}
+
+.search-query:focus + button {
+    z-index: 3;
 }
