--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; line-height: 1.85;}
+.w3-left{
+  margin-right: 3%;
+}
 .bg-danger{
   margin: 10%;
 }
@@ -18,10 +22,6 @@
   font-size: 150%;
 }
 
-.w3-left{
-  margin-right: 15px;
-}
-
 .w3-container{
   padding-top:22px;
 }
@@ -32,50 +32,6 @@
 
 .fa-dashboard{
   margin-left: 10px;
-}
-
-#custom-search-input {
-        margin:0;
-        margin-top: 0px;
-        padding: 0;
-        margin-top: 0%;
-        margin-left: 0%;
-        margin: -8px;
-        margin-top: 2px;
-        margin-bottom: 2%;
-}
-
-#custom-search-input .search-query {
-    padding-right: 3px;
-    padding-right: 4px \9;
-    padding-left: 3px;
-    padding-left: 4px \9;
-    /* IE7-8 doesn't have border-radius, so don't indent the padding */
-
-    margin-bottom: 0;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-
-#custom-search-input button {
-    border: 0;
-    background: none;
-    /** belows styles are working good */
-    padding: 2px 5px;
-    margin-top: 2px;
-    position: relative;
-    left: -28px;
-    /* IE7-8 doesn't have border-radius, so don't indent the padding */
-    margin-bottom: 0;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    color:#D9230F;
-}
-
-.search-query:focus + button {
-    z-index: 3;
 }
 
 .toolbar-spacer {
